# utl

./: .clang-format  .gitignore  CMakeLists.txt
include/utl/: arena.h  assert.h  bit.h  bytes.h  coff.h  file.h  macro.h  mem.h  pe.h  prng.h  str.h  thread.h  type.h  utf.h  utl.h  whoami.h
src/: arena.c  bytes.c  file.c  file.posix.c  file.windows.c  mem.posix.c  mem.windows.c  pe.c  prng.c  str.c  thread.c  utf.c
test/: arena.c  bytes.c  prng.c  str.c  test.h  test_main.c  utf.c
