cmake_minimum_required(VERSION 3.25)
project(utl)
file(GLOB_RECURSE utl_sources "src/*.c")
file(GLOB_RECURSE utl_headers "include/*.h" "src/*.h")
source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${utl_sources} ${utl_headers})
if(NOT WIN32)
    list(FILTER utl_sources EXCLUDE REGEX ".*windows.c$")
endif()
if(NOT UNIX)
    list(FILTER utl_sources EXCLUDE REGEX ".*posix.c$")
endif()
add_library(utl STATIC ${utl_sources} ${utl_headers})
target_include_directories(utl PUBLIC include PRIVATE src)
add_library(utl::utl ALIAS utl)
option(UTL_BUILD_TESTS "Build tests for utl" ON)
if(UTL_BUILD_TESTS)
    enable_testing()
    file(GLOB_RECURSE utl_test_sources "test/*.c")
    file(GLOB_RECURSE utl_test_headers "test/*.h")
    source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${utl_test_sources} ${utl_test_headers})
    add_executable(utl_test ${utl_test_sources} ${utl_test_headers})
    target_link_libraries(utl_test PRIVATE utl::utl)
    add_test(NAME utl_test COMMAND utl_test)
endif()